<resources>
    <string name="app_name">LoLStats</string>
    <string name="error_message">Error, prueba otra vez.</string>
    <string name="search">Buscar</string>
    <string name="refresh">Refresh</string>
    <string name="summoner_name">Introduce a Summoner Name</string>

    <!-- Strings related to errors -->
    <string name="error_invalid_summoner_name">Please, introduce a valid summoner name</string>
    <string name="error_empty_summoner_name">Please, introduce a summoner name</string>

    <!-- Strings related to match_list_item.xml-->
    <string name="slash">/</string>
    <string name="kda">KDA</string>

    <string name="csmin">CS/MIN:</string>
    <string name="dmgmin">DMG/MIN:</string>

    <!-- Strings related to activity_main.xml-->
    <string name="ranked_solo">Ranked Solo</string>
    <string name="ranked_flex">Ranked Flex</string>
    <string name="ranked_3v3">Ranked 3V3</string>
    <string name="cs">CS:</string>

    <string name="champion_stats">Champion Stats</string>

    <string name="role_stats">Role Stats</string>
    <string name="top">Top</string>
    <string name="jungle">Jungle</string>
    <string name="mid">Mid</string>
    <string name="bottom">Bottom</string>
    <string name="support">Support</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to details_match_list_item.xml -->
    <string name="damage_percent">DMG%:</string>
    <string name="gold">GOLD:</string>


    <string-array name="region_array">
        <item>EUW</item>
        <item>EUNE</item>
        <item>NA</item>
        <item>KR</item>
        <item>BR</item>
    </string-array>


</resources>
