<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:background="@android:color/holo_green_light"
    android:paddingTop="2dp"
    android:paddingBottom="2dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

<de.hdodenhof.circleimageview.CircleImageView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:src="@drawable/mock_champion"
    app:civ_border_color="#FF000000"
    app:civ_border_width="2dp"
    style="@style/match_details_champion_image" />

<LinearLayout
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:orientation="horizontal">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:src="@drawable/main_rune"
        style="@style/match_details_top_icon" />

    <ImageView
        android:src="@drawable/secondary_rune"
        style="@style/match_details_bottom_icon" />

</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        style="@style/match_details_top_icon"
        android:src="@drawable/ignite" />

    <ImageView
        style="@style/match_details_bottom_icon"
        android:src="@drawable/flash" />

</LinearLayout>

</LinearLayout>

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            tools:text="Summoner"
            style="@style/match_details_summoner_name" />
        <TextView
            tools:text="Platinum 5"
            style="@style/match_details_mmr" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity=""
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                tools:text="2"
                style="@style/match_details_kda_detailed" />
            <TextView
                android:text="@string/slash"
                style="@style/match_details_kda_detailed" />
            <TextView
                style="@style/match_details_kda_detailed"
                tools:text="5"
                android:textColor="#cc1818" />
            <TextView
                android:text="@string/slash"
                style="@style/match_details_kda_detailed" />
            <TextView
                tools:text="2"
                style="@style/match_details_kda_detailed" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:text="@string/kda"
                style="@style/match_details_kda" />
            <TextView
                tools:text="1.57"
                style="@style/match_details_kda_value" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/csmin"
                style="@style/match_details_stats" />

            <TextView
                tools:text="17.2"
                style="@style/match_details_stats_value" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/match_details_stats"
                android:text="@string/dmgmin"/>

            <TextView
                style="@style/match_details_stats_value"
                tools:text="1705"/>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:layout_marginStart="15dp"
    android:layout_marginLeft="15dp"
    android:orientation="horizontal">


    <ImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:background="@drawable/empty_item"/>

    <ImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp"
        android:background="@drawable/empty_item"/>

    <ImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp"
        android:background="@drawable/empty_item"/>

    <ImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp"
        android:background="@drawable/empty_item"/>

    <ImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp"
        android:background="@drawable/empty_item"/>

    <ImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp"
        android:background="@drawable/empty_item"/>


    <!--TODO crear empty trinket -->

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp"
        android:src="@drawable/trinket"
        />


    </LinearLayout>
</LinearLayout>
</LinearLayout>