<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="RESULT: WON"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="STATSa"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:paddingTop="2dp"
                android:paddingBottom="2dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_champion_image"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@drawable/mock_champion"
                    android:layout_marginLeft="3dp"
                    android:layout_marginStart="2dp"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_rune_keystone"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="1dp"
                            android:layout_marginStart="2dp"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/circle"
                            android:src="@drawable/main_rune" />

                        <ImageView
                            android:id="@+id/iv_secondary_rune_path"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="1dp"
                            android:layout_marginStart="2dp"
                            android:background="@drawable/circle"
                            android:src="@drawable/secondary_rune" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <ImageView
                            android:id="@+id/iv_first_summoner_spell"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="2dp"
                            android:layout_marginStart="2dp"
                            android:layout_marginBottom="5dp"
                            android:src="@drawable/ignite" />

                        <ImageView
                            android:id="@+id/iv_second_summoner_spell"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="2dp"
                            android:layout_marginStart="2dp"
                            android:src="@drawable/flash" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:baselineAligned="false">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:gravity=""
                            android:layout_marginStart="15dp"
                            android:layout_marginLeft="15dp"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <TextView
                                    android:id="@+id/tv_kills"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    tools:text="2"
                                    android:textColor="@android:color/black"
                                    android:textSize="13sp" />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/slash"
                                    android:textColor="@android:color/black"
                                    android:textSize="13sp" />
                                <TextView
                                    android:id="@+id/tv_deaths"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    tools:text="5"
                                    android:textColor="#cc1818"
                                    android:textSize="13sp" />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/slash"
                                    android:textColor="@android:color/black"
                                    android:textSize="13sp" />
                                <TextView
                                    android:id="@+id/tv_assists"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    tools:text="12"
                                    android:textColor="@android:color/black"
                                    android:textSize="13sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="10sp"
                                    android:text="@string/kda"/>
                                <TextView
                                    android:id="@+id/tv_kda"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_horizontal"
                                    android:layout_marginBottom="2dp"
                                    android:layout_marginLeft="2dp"
                                    android:layout_marginStart="2dp"
                                    android:textSize="10sp"
                                    tools:text="1.57"/>
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">


                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="10sp"
                                    android:text="@string/csmin"/>

                                <TextView
                                    android:id="@+id/tv_match_primary_stat"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="2dp"
                                    android:layout_marginStart="2dp"
                                    tools:text="17.2"
                                    android:textSize="10sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="8sp"
                                    android:text="@string/dmgmin"/>

                                <TextView
                                    android:id="@+id/tv_match_secondary_stat"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="2dp"
                                    android:layout_marginStart="2dp"
                                    android:textSize="8sp"
                                    tools:text="1705"/>

                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical|end"
                            android:orientation="vertical"
                            android:layout_marginRight="3dp"
                            android:layout_marginEnd="3dp">

                            <TextView
                                android:id="@+id/tv_game_duration"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="19/10/1997"
                                android:textSize="7sp"/>
                            <TextView
                                android:id="@+id/tv_game_type"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="7sp"
                                tools:text="Ranked Queue"/>
                            <TextView
                                android:id="@+id/tv_game_time_ago"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="7sp"
                                tools:text="Hace 5 dias"/>


                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_item0"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:background="@drawable/empty_item"/>

                        <ImageView
                            android:id="@+id/iv_item1"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="2dp"
                            android:layout_marginStart="2dp"
                            android:background="@drawable/empty_item"/>

                        <ImageView
                            android:id="@+id/iv_item2"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="2dp"
                            android:layout_marginStart="2dp"
                            android:background="@drawable/empty_item"/>

                        <ImageView
                            android:id="@+id/iv_item3"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="2dp"
                            android:layout_marginStart="2dp"
                            android:background="@drawable/empty_item"/>

                        <ImageView
                            android:id="@+id/iv_item4"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="2dp"
                            android:layout_marginStart="2dp"
                            android:background="@drawable/empty_item"/>

                        <ImageView
                            android:id="@+id/iv_item5"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="2dp"
                            android:layout_marginStart="2dp"
                            android:background="@drawable/empty_item"/>

                        <!--TODO crear empty trinket -->

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/iv_trinket"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="2dp"
                            android:layout_marginStart="2dp"
                            android:src="@drawable/trinket"
                            />


                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>